update UI n=1 network grid

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,5 +5,7 @@
   "about": "about",
   "dashboard": "Dashboard",
   "data": "Data",
-  "toolkit": "Toolkit"
+  "toolkit": "Toolkit",
+  "welcome": "Welcome",
+  "help": "Help"
 }
