--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -5,5 +5,7 @@
   "about": "关于",
   "dashboard": "仪表板",
   "data": "数据",
-  "toolkit": "工具包"
+  "toolkit": "工具包",
+  "welcome": "欢迎",
+  "help": "救命"
 }
